Fix wrap list content

--- a/resources/static/css/theme_overrides.css
+++ b/resources/static/css/theme_overrides.css
@@ -91,3 +91,7 @@
        overriding this as on RTD they are loaded after this stylesheet */
     white-space: normal !important;
 }
+
+.table-wrap {
+    overflow: visible !important;
+}
